busybox-with-vault-data.yaml
apiVersion: v1
kind: Pod
  name: busybox
  namespace: vault
spec:
  containers:
    image: busybox
    name: busybox
    volumeMounts:
    - mountPath: /vault/data
      name: data
    - mountPath: /vault/config
      name: config
    - mountPath: /home/vault
      name: home
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-bf2ns
      readOnly: true
  securityContext:
    fsGroup: 1000
    runAsGroup: 1000
    runAsNonRoot: true
    runAsUser: 100
  serviceAccount: vault
  serviceAccountName: vault
  subdomain: vault-internal
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: data-vault-0
  - configMap:
      defaultMode: 420
      name: vault-config
    name: config
  - emptyDir: {}
    name: home
  - name: kube-api-access-bf2ns
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
