flask-redis.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: flask
  name: flask
  namespace: ingress-nginx
spec:
  containers:
  - name: flask
    image: maxi4/hit-counter:prometheus_metrics
    ports:
    - containerPort: 5000
      protocol: TCP
  - name: redis-lb
    image: redis:alpine
    ports:
    - containerPort: 6379
      protocol: TCP 
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    run: flask
  ports:
  - name: flask
    protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30007
