flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: ingress-nginx
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: flask
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    run: flask
  sessionAffinity: None
  type: NodePort
