flask.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: flask
  name: flask
  namespace: ingress-nginx
spec:
  containers:
  - image: calinrus/hit-counter
    imagePullPolicy: Always
    name: flask
    ports:
    - containerPort: 5000
      protocol: TCP
  hostAliases:
  - ip: "redis_ip"
    hostnames:
    - "redis-lb"
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: ingress-nginx
spec:
  selector:
    run: flask
  ports:
  - name: flask
    protocol: TCP
    port: 5000
    targetPort: 5000
