nginx_ingress-prometheus-grafana-flask.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus-grafana-flask
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 5000
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 9090
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000          
      - path: /grafana/dashboard
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
---
